tests/fixtures/pass/coalesce_infer_option_none.sc
use core.Option

let main(): i32 = { Option.None ?? 42 }
