tests/fixtures/fail/throw_in_option_return.sc
use core.Option

let fail(): Option(i32) = {
  throw(true)
}

let main(): i32 = { 42 }
